<resources>
    <string name="app_name">Pengenalan Kopi</string>
    <!--string untuk deskripsi kopi-->
    <string name="subTitleKopiJantan">Your subtitle goes here...</string>
    <string name="subTitleKopiBetina">Your subtitle goes here...</string>
    <string name="subTitleKopiLuwak">Your subtitle goes here...</string>
    <!--string untuk menu login-->
    <string name="create_account"><font color="#FAFAFA">text</font></string>
    <string name="nama">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="back_to_login"><font color="#FFFFFF">Kembali ke halaman</font> <font color="#FFC107">Login </font> </string>
    <!--string untuk menu tentang saya-->
    <string name="judul_skripsi">APLIKASI PENGENALAN JENIS-JENIS KOPI BERBASIS ANDROID DI PT. KOPINDO JAYA</string>
    <string name="tentang_skripsi">DIAJUKAN SEBAGAI SALAH SATU SYARAT UNTUK MENCAPAI GELAR SARJANA KOMPUTER (S1) PROGRAM STUDI TEKNIK INFORMATIKA</string>
    <!--string untuk menu pengolahan kopi-->
    <string name="penimbangan">Penimbangan dilakukan sebelum kopi diangkut ke ruangan untuk penyangraian. Kopi ditimbang dengan kapasitas 50Kg sekali penyangraian. Banyaknya jumlah kopi yang disangrai tergantung dari banyaknya komsumen yang berkunjung ke perusahaan, jika konsumen yang berkunjung dalam jumlah banyak maka penyangraian dilakukan setiap hari dengan maksimum mencapai ± 500kg perhari.</string>
    <string name="penyangraian_kopi_jantan_dan_betina">Penyangraian sangatlah menentukan warna dan cita rasa produk kopi yang akan dikonsumsi. Waktu penyangraian ditentukan atas dasar warna Biji Kopi atau sering disebut derajat sangrai. Yang Merupakan penyangraian biji kopi yang tergantung pada waktu dan suhu yang ditandai dengan perubahan kimiawi yang signifikan. Berdasarkan suhu penyangraian yang digunakan kopi sangrai dibedakan atas 3 golongan yaitu: lligh roast yaitu suhu yang digunakan sekitar 193\u00B0C-199\u00B0C, medium roast yaitu suhu yang digunakan 204\u00B0C, dan drak roasting dengan suhu 213\u00B0C-221\u00B0C (Ridwansyah, 2003: 75).</string>
    <string name="penyangraian_kopi_jantan_dan_betina_2">Tahap awal penyangraian atau <i>roasting</i> adalah membuang uap air pada suhu penyangraian 100\u00B0C dan berikutnya tahap pyrolysis pada suhu 180\u00B0C pada tahap ini terjadi pengurangan bobot kopi sebanyak 10% (Ridwansyah, 2003: 1). Proses penyangraian hanya dilakukan oleh karyawan dan tidak diijinkan untuk peneliti. Sehingga peneliti hanya mengamati dan mencatat apa yang dilakukan karyawan selama proses penyangraian. Proses penyangraian yang dilakukan oleh PT. Kopindo Jaya menggunakan suhu 248\u00B0C selama 3-5 menit melalui proses penyangraian tertutup dengan menggunakan peralatan yang dilengkapi dengan ciclon (penyerap asap). Penyangraian tertutup dilakukan agar mempercepat proses penyangraian. Kopi akan terhindar dari pencemaran bau bahan bakar maupun bau gas hasil pembakaran yang tidak sempurna. Pada roaster, air ditambahkan ke biji dalam drum penyangraian ditahap pendinginan untuk mempercepat pedinginan dan meningkatkan keseragaman partikel untuk penggilingan.</string>
    <string name="penyangraian_kopi_luwak">Proses penyangraian Kopi Luwak berbeda dengan Kopi Jantan Dan Betina. Pada penyangraian Kopi Luwak, PT. Kopindo Jaya menggunakan api dari kompor dengan bahan bakar gas yang dikontrol oleh karyawan. Jumlah bahan baku Kopi Luwak dalam sekali produksi yaitu 8-10kg. Berdasarkan penelitian Larasati dalam Aristyawati (2016), Kopi Luwak dengan suhu penyangraian 160\u00B0C selama 18 menit memiliki kadar sari kopi, kadar abu, kealkalian abu, dan kadar kafein yang terbaik berdasarkan Standar Nasional Indonesia (SNI). Setelah dilakukan penyangraian, maka tahap selanjutnya yaitu proses pendinginan. Proses pendinginan dilakukan dengan suhu 35\u00B0C selama ±2 menit menggunakan mesin pendingin <i>(blower)</i>.</string>
    <string name="sortasi">Sortasi dilakukan dengan tujuan untuk memisahkan biji kopi berdasarkan ukuran, cacat biji, maupun benda asing. Sortasi ukuran dapat dilakukan dengan ayakan mekanis maupun manual. (Anon dalam Aristyawati, 2016: 92). Sortasi yang dilakukan oleh PT. Kopindo Jaya yaitu setelah biji kopi disangrai agar kopi yang dijual memiliki kualitas yang baik sekaligus memisahkan antara Kopi Jantan dan Betina yang masih tercampur. Sedangkan pengemasan bertujuan untuk mempertahankan aroma dan cita rasa kopi bubuk selama penyimpanan. Beberapa jenis kemasan yang digunakan oleh PT. Kopindo Jaya yaitu plastik transparan, metal dan juga aluminium foil.  Kopi Betina biji bubuk dikemas langsung dengan menggunakan almunium foil sebagai kemasan primer dengan berat 225gr. Kemudian untuk Kopi Jantan, dikemas dengan menggunakan plastik transparan dengan berat bersih 220gr dalam bentuk biji, sedangkan yang dalam bentuk bubuk hanya akan dibuat sesuai permintaan konsumen yang dikemas menggunakan almunium foil dan dimasukan lagi ke dalam box. Kemasan Kopi Luwak sendiri terdapat tiga macam jenis ukuran yaitu kemasan kotak kecil dengan isi kopi 100gr, kemasan kotak sedang dengan isi kopi 200gr, dan juga kemasan kopi besar dengan isi kopi 500gr.</string>
    <string name="penggilingan">Kopi yang telah disortasi dapat dijual dalam bentuk biji maupun dalam bentuk bubuk. Untuk Kopi Betina, PT. Kopindo Jaya selalu menyediakan stok dalam bentuk bubuk oleh karena itu penggilingan untuk biji Kopi Betina lebih banyak dilakukan dibandingkan dengan biji Kopi Jantan dan juga Kopi Luwak. Penggilingan Kopi Jantan dan Luwak hanya dilakukan jika konsumen ingin membelinya dalam bentuk bubuk. Tujuan perusahaan menjual Kopi Jantan dan Luwak dalam bentuk biji agar konsumen dapat melihat terlebih dahulu kualitas biji kopi sebelum melakukan pembelian. Selain itu agar kopi memiliki daya simpan yang lebih lama. Kopi dalam bentuk biji memiliki masa kadaluarsa hingga 1,5 tahun dan memiliki aroma kopi tidak cepat hilang.Mesin penggiling yang digunakan untuk menggiling Kopi Jantan dan Kopi Betina berjumlah 8 buah, sedangkan untuk Kopi Luwak ada 4 buah. Mesin penggiling kopi yang digunakan oleh Perusahaan Golden Rabits Coffee merupakan mesin yang sudah memenuhi standar untuk hasil giling kopi.</string>
    <string name="penyajian">Di PT. Kopindo Jaya, setiap pengunjung akan diajak berkeliling perusahaan untuk melihat sejarah kopi, hingga cara pembuatan kopi secara langsung oleh Seles. Kemudian setelah diberi penjelasan, maka pengunjung akan disediakan ruangan cafeteria untuk dipersilahkan mencicipi es kopi maupun kopi hangat. Penyajian kopi dapat dilakukan didalam ruangan cafeteria maupun dapur dengan takaran untuk 75gr kopi dengan 10ml air hangat akan menghasilkan 15-20 gelas kopi. Sedangkan untuk 55gr kopi dengan 8ml air hangat akan menghasilkan hingga 14 gelas kopi.</string>
    <string name="krimer">Pengemasan creamer dilakukan di ruangan yang berbeda dengan ruangan produksi. Creamer dikemas menjadi sachet dan dimasukan kedalam kotak, yang satu kotaknya terisi sebanyak 30 sachet creamer. Sedangkan untuk penjualannya, creamer dijual dengan harga Rp 200 Ribu untuk satu tas dengan isi enam kotak creamer. Untuk penyajian didalam ruangan cafeteria, creamer dan susu kental manis juga disediakan untuk para tamu. Maka, para tamu yang datang dapat memilih dan meminta kepada sales untuk menambah creamer maupun susu kental manis dalam kopi mereka masing-masing.</string>
</resources>
